--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mime": "^1.3.4",
     "minimatch": "~3.0.0",
     "mkdirp": "~0.5.1",
+    "navelgazer": "^1.1.2",
     "promise-map-series": "~0.2.1",
     "require-relative": "~0.8.7",
     "resolve": "^1.1.6",
